# QtVSCodeStyle

./: .gitignore  .gitmodules  .lgtm.yaml  .pre-commit-config.yaml  NOTICE.md  README.md  lgtm.yaml  pyproject.toml
qtvscodestyle/: __init__.py  base.py  build.py  const.py  icon_manager.py  template.qss  util.py  validate_colors.json
qtvscodestyle/examples/activitybar/: __main__.py
qtvscodestyle/examples/icon_browser/: __main__.py
qtvscodestyle/examples/line/: __main__.py
qtvscodestyle/examples/lineedit/: __main__.py
qtvscodestyle/examples/pushbutton/: __main__.py
qtvscodestyle/examples/switching_theme/: __main__.py
qtvscodestyle/examples/theme_icon/: __main__.py
qtvscodestyle/examples/widget_gallery/: __main__.py
qtvscodestyle/google_fonts/: __init__.py
qtvscodestyle/q_icon/: __init__.py  iconic_font.py  svg.py
qtvscodestyle/resource_builder/: __main__.py
qtvscodestyle/stylesheet/: build.py  template.qss
qtvscodestyle/theme/: Red-color-theme.json  abyss_color_theme.json  dark_vs.json  dimmed-monokai-color-theme.json  hc_black.json  kimbie-dark-color-theme.json  light_vs.json  monokai-color-theme.json  quietlight-color-theme.json  solarized-light-color-theme.json  solarized_dark_color_theme.json  tomorrow-night-blue-color-theme.json
qtvscodestyle/vscode/: color.py  color_registry.py  color_registry_manager.py
qtvscodestyle/vscode/theme/: Red-color-theme.json  abyss_color_theme.json  dark_vs.json  dimmed-monokai-color-theme.json  hc_black.json  kimbie-dark-color-theme.json  light_vs.json  monokai-color-theme.json  quietlight-color-theme.json  (+3 more)
(+3 files in other folders)
